--- a/site/themes/cocoa-eh/exampleSite/config.toml
+++ b/site/themes/cocoa-eh/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://example.com/"
 theme = "cocoa-eh"
 builddrafts = true
 canonifyurls = true
@@ -6,8 +6,8 @@ contentdir = "content"
 languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
-author = "Zachary Swarth"
-title = "Leanring Data Science from The Ground Up"
+author = "Alexis Tacnet"
+title = "Cocoa Enhanced"
 disqusshortname = ""
 pluralizelisttitles = false
 
@@ -17,7 +17,7 @@ blog = "blog/:slug/"
 [params]
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description = "Learning Data Sceince and Computer Science from scratch"
+description = "Example blog"
 copyright = "Copyright © 2015 Nishanth Shanmugham"
 # copyrightUrl = "https://creativecommons.org/licenses/by-sa/4.0/"
 logofile = "img/logo.png"
@@ -25,14 +25,14 @@ faviconfile = "img/logo.png"
 highlightjs = true
 progressively = true
 share = true
-latestpostcount = 10
-github = "elden2"
-email = "zachary.swarth@gmail.com"
-linkedin = "zachary-swarth-4bb15033/"
-#twitter = "example"
-#facebook = "facebook_id"
+latestpostcount = 5
+github = "example"
+email = "you@example.com"
+linkedin = "john-example-aa80ue8è"
+twitter = "example"
+facebook = "facebook_id"
 social_banner = "img/banner.png"
-#usesmallsummarycard = true
+usesmallsummarycard = true
 posts_navigation = true
 # issoHost = "comments.domain.tld:1234"
 # githubRepo = "githubUsername/repositoryName"
