--- a/site/config.toml
+++ b/site/config.toml
@@ -10,6 +10,9 @@ author = "Zachary Swarth"
 title = "Learning Data Science from The Ground Up"
 disqusshortname = ""
 pluralizelisttitles = false
+-googleAnalytics = ""
++googleAnalytics = "UA-114584643-1"
+
 
 [permalinks]
 blog = "blog/:slug/"
