--- a/site/config.toml
+++ b/site/config.toml
@@ -6,7 +6,8 @@ contentdir = "content"
 languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
-author = "Zachary Swarth"
+notebook = true
+author = "Zachary S"
 title = "Learning Data Science from The Ground Up"
 disqusshortname = ""
 pluralizelisttitles = false
