--- a/site/themes/cocoa-eh/exampleSite/config.toml
+++ b/site/themes/cocoa-eh/exampleSite/config.toml
@@ -8,7 +8,7 @@ layoutdir = "layouts"
 publishdir = "public"
 author = "Alexis Tacnet"
 title = "Cocoa Enhanced"
-disqusshortname = ""
+disqusshortname = "zswarth"
 pluralizelisttitles = false
 
 [permalinks]
