--- a/site/config.toml
+++ b/site/config.toml
@@ -6,7 +6,7 @@ contentdir = "content"
 languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
-author = "Zachary Swarth"
+author = "Zachary S"
 title = "Learning Computer Science from the Ground Up"
 pluralizelisttitles = false
 disqusshortname = "zswarth"
